--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="추억거리">
+<meta property="og:image" content="forlegacy.life/6.webp">
 <script>
 const invite = new URLSearchParams(window.location.search).get('invite');
 if (invite) {
