--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="추억거리">
-<meta property="og:image" content="forlegacy.life/6.webp">
+<meta property="og:image" content="https://i.namu.wiki/i/jMuF1wjWr7c4iVtro28j2zela9twbVoPB5niogedacu5-mYuywbYPI6spWSirAGwh0BlAlTP2Lder3YfW1NYWC_T_HrYldBdJxPWuBm6ICQ44qEKts81L7s_et7ScYoHqjqtIEbDqpcGQWKBcl3EYA.webp">
 <script>
 const invite = new URLSearchParams(window.location.search).get('invite');
 if (invite) {
